--- a/popup.html
+++ b/popup.html
@@ -159,6 +159,27 @@
         </div>
         <input type="range" id="lowpassFreq" min="2000" max="22050" value="22050" step="500">
       </div>
+
+      <div class="control-section-label">Effects</div>
+
+      <div class="control-group">
+        <div class="control-header">
+          <label for="noiseLevel">Noise Amount</label>
+          <span class="value" id="noiseLevelValue">Off</span>
+        </div>
+        <input type="range" id="noiseLevel" min="0" max="0.3" value="0" step="0.01">
+      </div>
+
+      <div class="control-group">
+        <div class="control-header">
+          <label for="noiseType">Noise Type</label>
+        </div>
+        <select id="noiseType" class="dropdown">
+          <option value="brown">Brown (Cozy rumble)</option>
+          <option value="pink">Pink (Rain/CRT hum)</option>
+          <option value="white">White (Harsh static)</option>
+        </select>
+      </div>
     </div>
 
     <!-- Other Tabs Mixer -->
