Implement CRT visual effects and mixer mode in audio processing

--- a/popup.html
+++ b/popup.html
@@ -24,6 +24,12 @@
     </header>
 
     <div class="mode-row">
+      <span class="mode-label mixer-mode" id="mixerModeLabel" title="Mixer mode: control multiple tabs (no fullscreen)">Mixer</span>
+      <label class="toggle small">
+        <input type="checkbox" id="mixerModeToggle">
+        <span class="slider"></span>
+      </label>
+      <span class="mode-divider">|</span>
       <span class="mode-label" id="modeLabel">Simple</span>
       <label class="toggle small">
         <input type="checkbox" id="modeToggle">
@@ -64,7 +70,7 @@
         </button>
         <button class="preset-btn" data-preset="tv90s">
           <span class="preset-name">90s TV</span>
-          <span class="preset-desc">Warm CRT sound</span>
+          <span class="preset-desc">Tap twice for TV+</span>
         </button>
       </div>
     </div>
