Enhance audio processing features: add noise control, CRT visual effects, and improve mixer mode functionality

--- a/popup.html
+++ b/popup.html
@@ -24,6 +24,12 @@
     </header>
 
     <div class="mode-row">
+      <span class="mode-label crt-label" id="crtLabel" title="CRT visual effect: scanlines, vignette, color shift">CRT</span>
+      <label class="toggle small">
+        <input type="checkbox" id="crtToggle">
+        <span class="slider"></span>
+      </label>
+      <span class="mode-divider">|</span>
       <span class="mode-label mixer-mode" id="mixerModeLabel" title="Mixer mode: control multiple tabs (no fullscreen)">Mixer</span>
       <label class="toggle small">
         <input type="checkbox" id="mixerModeToggle">
