--- a/popup.html
+++ b/popup.html
@@ -179,6 +179,72 @@
         </select>
       </div>
 
+      <!-- AI Noise Suppression -->
+      <div class="control-section-label noise-suppression-header">
+        <span>AI Noise Suppression</span>
+        <label class="toggle small">
+          <input type="checkbox" id="noiseSuppressionToggle">
+          <span class="slider"></span>
+        </label>
+        <span class="noise-suppression-label" id="noiseSuppressionLabel">Off</span>
+      </div>
+      <div class="control-note" id="noiseSuppressionNote">
+        RNNoise AI removes background noise (keyboard, fan, etc.)
+      </div>
+
+      <!-- Auto-Gain (AGC) -->
+      <div class="control-section-label auto-gain-header">
+        <span>Auto-Gain (AGC)</span>
+        <label class="toggle small">
+          <input type="checkbox" id="autoGainToggle">
+          <span class="slider"></span>
+        </label>
+        <span class="auto-gain-label" id="autoGainLabel">Off</span>
+      </div>
+      <div class="control-group">
+        <div class="control-header">
+          <label for="autoGainTarget">Target Level</label>
+          <span class="value" id="autoGainTargetValue">-16 dB</span>
+        </div>
+        <input type="range" id="autoGainTarget" min="-30" max="-6" value="-16" step="1">
+      </div>
+
+      <!-- Limiter -->
+      <div class="control-section-label limiter-header">
+        <span>Limiter</span>
+        <label class="toggle small">
+          <input type="checkbox" id="limiterToggle" checked>
+          <span class="slider"></span>
+        </label>
+        <span class="limiter-label active" id="limiterLabel">On</span>
+      </div>
+      <div class="control-group">
+        <div class="control-header">
+          <label for="limiterThreshold">Ceiling</label>
+          <span class="value" id="limiterThresholdValue">-1 dB</span>
+        </div>
+        <input type="range" id="limiterThreshold" min="-6" max="0" value="-1" step="0.5">
+      </div>
+
+      <!-- Filters Section (Bass/Treble Cut) -->
+      <div class="control-section-label">Filters</div>
+
+      <div class="control-group">
+        <div class="control-header">
+          <label for="bassCutFreq">Bass Cut (Highpass)</label>
+          <span class="value" id="bassCutFreqValue">Off</span>
+        </div>
+        <input type="range" id="bassCutFreq" min="0" max="400" value="0" step="10">
+      </div>
+
+      <div class="control-group">
+        <div class="control-header">
+          <label for="trebleCutFreq">Treble Cut (Lowpass)</label>
+          <span class="value" id="trebleCutFreqValue">Off</span>
+        </div>
+        <input type="range" id="trebleCutFreq" min="4000" max="22050" value="22050" step="100">
+      </div>
+
       <!-- 5-Band Parametric EQ Section -->
       <div class="control-section-label eq-header">
         <span>5-Band EQ</span>
